# project-8

./: .gitignore  LICENSE  pyproject.toml
Week1/: README.md  bovw.py  main.py  week1_exps.ipynb
Week2/: README.md  bovw_mlp.py  computational_graph  main.py  models.py  task2_tests.ipynb  utils.py
Week3/: Readme.md  main.py  main_task0-1.py  main_task4_5.py  models.py  models_task0-1.py  models_task4_5.py
Week4/: main.py  models.py
