[project]
name = "project-8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grad-cam>=1.5.5",
    "matplotlib>=3.10.7",
    "natsort>=8.4.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torchsummary>=1.5.1",
    "torchview>=0.2.7",
    "torchvision>=0.24.1",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
